--- a/style.css
+++ b/style.css
@@ -100,6 +100,8 @@ body{
     background-color: #ff5959;
     color: white;
     font-weight: 700;
+    border-style: solid;
+    border-color: #ff5959;
 }
 #footer{
     background-color: black;
